NIHVIVO-556: Created temporary fix for not showing log-in widget after users log-in.

--- a/themes/wilma/css/wilma.css
+++ b/themes/wilma/css/wilma.css
@@ -177,19 +177,24 @@ h2{
     width: 570px;
     padding-bottom: 40px;
 }
-#intro h3 {
+#intro-no-login{
+    float: left;
+    width: 920px;
+    padding-bottom: 40px;  
+}
+#intro h3, #intro-no-login h3 {
     padding: 35px 0 12px 24px;
     font-size: 22px;
     color: #2485ae;
     border-bottom: none;
 }
-#intro p {
+#intro p, #intro-no-login p {
     font-size: 16px;
     color: #5f6464;
     line-height: 1.3em;
     padding: 0 24px 30px 24px;
 }
-#intro a {
+#intro a, #intro-no-login a {
     color: #2485ae
 }
 .pictos-arrow-14 {
